--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "symfony/runtime": "5.4.*",
         "symfony/twig-bundle": "5.4.*",
         "symfony/validator": "5.4.*",
+        "symfony/webpack-encore-bundle": "^1.16",
         "symfony/yaml": "5.4.*"
     },
     "require-dev": {
